[tool.poetry]
name = "zaina"
version = "0.1.0"
description = ""
authors = ["Pankaj Garkoti <garkotipankaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
